upgrade to spring-boot 3.4.2