@@ -14,8 +14,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<file.encoding>UTF-8</file.encoding>
         <datafaker.version>2.3.1</datafaker.version>
-        <spring-boot.version>3.2.8</spring-boot.version> 
-        <springdoc-openapi-starter-webmvc-ui.version>2.6.0</springdoc-openapi-starter-webmvc-ui.version>
+        <spring-boot.version>3.4.2</spring-boot.version> 
+        <springdoc-openapi-starter-webmvc-ui.version>2.8.4</springdoc-openapi-starter-webmvc-ui.version>
+        <p6spy.version>1.9.2</p6spy.version>
     </properties>
 
     <dependencies>
@@ -43,8 +44,8 @@
         </dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId> 
-			<version>6.4.10.Final</version>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.6.5.Final</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -60,12 +61,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
+             
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -82,11 +78,11 @@
 		    <artifactId>flyway-mysql</artifactId>
 		    <scope>test</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>test</scope>
-		</dependency> -->
+		<dependency>
+		    <groupId>org.flywaydb</groupId>
+		    <artifactId>flyway-database-postgresql</artifactId> 
+		    <scope>test</scope>
+		</dependency> 
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-testcontainers</artifactId>
@@ -96,15 +92,15 @@
 		    <groupId>org.testcontainers</groupId>
 		    <artifactId>junit-jupiter</artifactId> 
 		    <scope>test</scope>
-		</dependency>
-		<!-- <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-indexer</artifactId>
-			<optional>true</optional>
-		</dependency> -->
+		</dependency> 
         <dependency>
 		    <groupId>org.testcontainers</groupId>
 		    <artifactId>postgresql</artifactId> 
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.testcontainers</groupId>
+		    <artifactId>mariadb</artifactId> 
 		    <scope>test</scope>
 		</dependency>
 		<dependency>
@@ -121,6 +117,11 @@
 		    <groupId>com.mysql</groupId>
 		    <artifactId>mysql-connector-j</artifactId>
 		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
+		     <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.datafaker</groupId>
@@ -144,6 +145,12 @@
 			<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.github.gavlyukovskiy</groupId>
+		    <artifactId>p6spy-spring-boot-starter</artifactId>
+		    <version>${p6spy.version}</version>
+		    <scope>test</scope>
+		</dependency>
     </dependencies>
 
     <build>
@@ -152,15 +159,7 @@
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-compiler-plugin</artifactId>
 	            <version>3.12.1</version>
-	            <configuration>
-	                <compilerArgs>
-	                    <arg>--add-opens</arg>
-	                    <arg>java.base/java.lang=ALL-UNNAMED</arg> 
-						<arg>--add-opens</arg>
-	                    <arg>java.xml/jdk.xml.internal=ALL-UNNAMED</arg> 
-	                </compilerArgs>
-	                <fork>true</fork>
-	            </configuration>
+	             
 	        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
